# sentinel

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: ab_testing.py  deploy_model.py  drift_detection.py
src/sentinel/: __init__.py  cli.py  platform.py
src/sentinel/gateway/: __init__.py  ab_test.py  rate_limiter.py  router.py
src/sentinel/monitoring/: __init__.py  alerts.py  drift.py  metrics.py
src/sentinel/scaling/: __init__.py  autoscaler.py
src/sentinel/serving/: __init__.py  runner.py  server.py
src/sentinel/utils/: logging.py
src/sentinel/versioning/: __init__.py  registry.py
tests/: test_ab_test.py  test_drift.py  test_metrics.py  test_rate_limiter.py  test_registry.py  test_scaling.py
