[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinel-ml"
version = "0.1.0"
description = "Production ML inference and observability platform with A/B testing, drift detection, and auto-scaling"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Andrew Stafford" }]
keywords = ["mlops", "inference", "serving", "monitoring", "drift-detection", "ab-testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "pydantic>=2.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "httpx>=0.27",
    "rich>=13.0",
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
torch = ["torch>=2.2"]
all = ["sentinel-ml[torch]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
]

[project.scripts]
sentinel = "sentinel.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
